tests/errors/math_domain_log.ki
discard import("math").log(0)
